# Kronos-Engine

./: CMakeLists.txt  README.md  library.h
include/core/: math.hpp
include/core/math/: common.hpp  math.hpp  matrix.hpp  quaternion.hpp  vector.hpp
src/core/: math.cpp
src/core/math/: common.cpp  matrix.cpp  quaternion.cpp  vector.cpp
tests/core/: math.cpp
